[package]
name = "hello"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hello"
path = "src/main.rs"

[lib]
name = "blast"
path = "src/lib/lib.rs"

[dependencies]
rltk = { version = "0.8.0" }
specs = "0.16.1"
specs-derive = "0.4.1"
getrandom = { version = "0.2", features = ["js"] }
